--- a/phosphor-gpio-presence@.service
+++ b/phosphor-gpio-presence@.service
@@ -5,6 +5,7 @@ After=mapper-wait@-xyz-openbmc_project-inventory.service
 ConditionPathExists=/etc/default/obmc/gpio/phosphor-power-supply-%i.conf
 
 [Service]
+Restart=on-failure
 EnvironmentFile=/etc/default/obmc/gpio/phosphor-power-supply-%i.conf
 ExecStart=/usr/bin/phosphor-gpio-presence --path=${DEVPATH} --inventory=${INVENTORY} --key=${KEY} --name=${NAME} --drivers=${DRIVERS} --extra-ifaces=${EXTRA_IFACES}
 
