gpio monitor should start after inventory manager
gpio monitor reports the present property to inventory manager.
So if inventory manager is not running, it would have no one to
report to and would feel so so sad.
This would make gpio-monitor no longer feel lonely.

--- a/phosphor-gpio-monitor@.service
+++ b/phosphor-gpio-monitor@.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Phosphor GPIO %I monitor
+Wants=mapper-wait@-xyz-openbmc_project-inventory.service
+After=mapper-wait@-xyz-openbmc_project-inventory.service
 
 [Service]
 Restart=always
